# CareerCrew

./: .gitignore
career_guide_ai/: pyproject.toml  report.md
career_guide_ai(crew ai)/: README.md
career_guide_ai(crew ai)/src/career_guide_ai/config/: agents.yaml
career_guide_ai/src/career_guide_ai/: crew.py  main.py
career_guide_ai/src/career_guide_ai/config/: tasks.yaml
frontend/: package-lock.json  package.json  report.md
frontend/src/app/: page.js
frontend/src/app/api/crew/: route.js
frontend/src/app/result/: page.js
