[project]
name = "career_guide_ai"
version = "0.1.0"
description = "career_guide_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
career_guide_ai = "career_guide_ai.main:run"
run_crew = "career_guide_ai.main:run"
train = "career_guide_ai.main:train"
replay = "career_guide_ai.main:replay"
test = "career_guide_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
